--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+
 <!-- load wagtailcore_tags by adding this: -->
 {% load wagtailcore_tags %}
 {% load wagtailimages_tags %}
@@ -17,5 +18,9 @@
             </div>
         </div>
     </div>
+
+    {% for block in page.content %}
+        {% include_block block %}
+    {% endfor %}
 
 {% endblock %}
