--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -10,13 +10,17 @@
 <!-- replace everything below with: -->
 {% block content %}
 
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1>{{ page.headline|richtext }}</h1>
-                <h3>{{ page.subline }}</h3>
-            </div>
+    <!--Header-->
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
+        <div class="col-md-6 p-lg-5 mx-auto my-5">
+        <h1 class="display-3 fw-bold"><h1>{{ page.headline }}</h1></h1>
+        <h3 class="fw-normal text-muted mb-3">{{ page.subline }}</h3>
+        <div class="d-flex gap-3 justify-content-center">
+            <button class="btn btn-primary btn-lg" type="button">Example button</button>
         </div>
+        </div>
+        <div class="product-device shadow-sm d-none d-md-block"></div>
+        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
     </div>
 
     {% for block in page.content %}
