--- a/service/templates/service/service_page.html
+++ b/service/templates/service/service_page.html
@@ -1,2 +1,34 @@
-Service
+{% extends "base.html" %}
+
+
+<!-- load wagtailcore_tags by adding this: -->
+{% load wagtailcore_tags %}
+{% load wagtailimages_tags %}
+
+{% block body_class %}template-homepage{% endblock %}
+
+<!-- replace everything below with: -->
+{% block content %}
+
+
+<div class="container">
+    <div class="p-5 mb-4 mt-3 bg-body-tertiary rounded-3">
+        <div class="container-fluid py-5">
+          <h1 class="display-5 fw-bold">{{ self.headline }}</h1>
+          {% if self.text %}
+            <div class="col-md-8 fs-4">{{ self.text|richtext }}</div>
+          {% endif %}
+          {% if self.page_link %}
+            <a href="{{ self.page_link }}" class="btn btn-primary btn-lg" type="button">{{ self.cta_text }}</a>
+          {% endif %}
+        </div>
+    </div>
+</div>
+
+{% for block in page.content %}
+    {% include_block block %}
+{% endfor %}
+
+{% endblock %}
+
 
