--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -54,6 +54,52 @@
             </header>
         </div> -->
 
+        <style>
+
+          small{
+            font-weight: 700;
+            color: #0c3ebb;
+          }
+
+          h1{
+            margin: 0.9rem 0;
+            font-size: 1.9rem;
+          }
+
+          h2 {
+            font-size: 1.6rem;
+          }
+
+          h3 {
+            font-size: 1.4rem;
+          }
+
+          p{
+            font-size: 1rem;
+          }
+          
+          footer .nav a{
+            font-weight: 700;
+          }
+          
+          footer .nav a:hover{
+            color: #0c3ebb !important;
+          }
+
+          footer.nav{
+
+          }
+
+          @media (min-width: 992px) { 
+            .hero-page{
+              min-height: 40vh;
+            }
+          }
+
+
+        </style>
+
+
         {% block content %}{% endblock %}
 
 
