--- a/stream/templates/stream/text.html
+++ b/stream/templates/stream/text.html
@@ -1,9 +1,9 @@
 
 <div class="container">
-    <div class="row">
+    <div class="row my-xl-5 mx-xl-5 mx-lg-2 my-lg-4 mx-md-2 my-md-2 mx-sm-1 my-sm-1 my-3 mx-2 py-5">
         <div class="col-12">
-            <h1>{{ self.headline }}</h1>
-            <div class="my-3">
+            <h1 class="px-md-5 px-4">{{ self.headline }}</h1>
+            <div class="px-md-5 px-4">
                 {{ self.paragraph }}
             </div>
         </div>
