--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -12,16 +12,19 @@
 
     <!--Header-->
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-body-tertiary">
-        <div class="col-md-8 p-lg-8 mx-auto my-5">
-        <h1 class="display-3 fw-bold"><h1>{{ page.headline }}</h1></h1>
-        <h3 class="fw-normal text-muted mb-3">{{ page.subline }}</h3>
-        <div class="d-flex gap-3 justify-content-center">
-            <button class="btn btn-primary btn-lg" type="button">Example button</button>
+        <div class="col-lg-6 col-md-8 p-lg-8 mx-auto my-5 d-flex hero-page flex-column justify-content-center">
+            <h1 class="display-3 fw-bold"><h1>{{ page.headline }}</h1></h1>
+            <h3 class="fw-normal text-muted mb-3">{{ page.subline }}</h3>
+            <div class="d-flex gap-3 justify-content-center">
+                {% if page.page_link %}
+                <a href="{{ page.page_link }}" class="btn btn-primary" type="button">{{ page.cta_text }}</a>
+                {% else %}
+                <a href="{{ page.external_url }}" class="btn btn-primary" type="button">{{ page.cta_text }}</a>
+                {% endif %}
+            </div>
         </div>
-        </div>
-        <div class="product-device shadow-sm d-none d-md-block"></div>
-        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
     </div>
+    <div class="mb-5"></div>
 
     {% for block in page.content %}
         {% include_block block %}
