--- a/stream/templates/stream/jumbotron.html
+++ b/stream/templates/stream/jumbotron.html
@@ -5,9 +5,14 @@
         <div class="col-12">
             <div class="p-md-5 p-4 {{ self.bg_color }} rounded-3">
                 <div class="container-fluid py-md-5 p-2">
-                  <h1 class="display-5 fw-bold">{{ self.headline }}</h1>
+                  <h1>{{ self.headline }}</h1>
                   <p class="col-md-8 fs-4">{{ self.paragraph }}</p>
-                  <a href="{{ self.page_link }}" class="btn btn-primary btn-lg" type="button">Example button</a>
+
+                    {% if self.page_link %}
+                    <a href="{{ self.page_link }}" class="btn btn-primary" type="button">{{ self.button_text }}</a>
+                    {% else %}
+                    <a href="{{ self.external_url }}" class="btn btn-primary" type="button">{{ self.button_text }}</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
