--- a/stream/templates/stream/marketing-text.html
+++ b/stream/templates/stream/marketing-text.html
@@ -3,7 +3,7 @@
 {% load wagtail_srcset_tags %}
 
 <div class="container">
-    <div class="row position-relative overflow-hidden p-3 d-flex align-items-center"> 
+    <div class="row position-relative overflow-hidden p-3 d-flex align-items-center py-xl-5"> 
         <div class="col-12 col-lg-6 col-md-12 px-xl-5 d-flex align-items-center">
             <div class="px-xl-5 p-sm-1 p-md-2">
                 <small>{{ self.subline }}</small>
